test/errors/func_init.sl
# expect: COMPERROR
# (functions need initializers)
() -> none func;
